@@ -18,15 +18,12 @@ duplication of effort and to make sure our changes merge easily.
   else I've forgotten?)
 ** Don't allow beavers in match play.  Allow optional automatic doubles in
   money play.
-** Add option "autocrawford" which will automatically set crawford when
-  the Crawford game is reached, and postcrawford after that.
 ** Make "new game" ask "are you sure?" if invoked while a game is in
   progress.
 
 * Command interface:
 ** Check "show" exists for every "set"!
-** Allow setting long seeds for dice generators that support them.  Support
-  /dev/random for seed generation where available.
+** Allow setting long seeds for dice generators that support them.
 ** Add more completions to help and readline.
 ** Allow user to vary parameters for rollouts.
 ** Allow timeouts for "train" (and others?).
@@ -38,10 +35,15 @@ duplication of effort and to make sure our changes merge easily.
 ** Write a proper input routine which will read a line from stdin under all
   conditions (with or without X, with or without readline, and whether
   stdin is a TTY or not).  Echo commands input with the mouse as if they had
-  been typed. (gary)
-** Be more liberal in the move syntax accepted. (gary)
+  been typed (this is nontrivial if a partial TTY command has been entered).
+  (gary)
+** Allow abbreviation of multiple moves (e.g. "8/7(2) 6/5(2)") and
+  concatenation of moves (e.g. "24/18*/13").
 ** Finish "help" -- add detailed help for each command.
 ** Add undo, reroll, and viewing next/prev moves in game/match. (gary)
+** Allow reading commands from scripts.  A .gnubgrc file would contain
+  startup commands.  This needs some thought to make sure it works well
+  with Guile scripts.
 ** Add "!" as a shell escape.
 ** Add ":" as a Guile escape, once it's here.
 
@@ -73,9 +75,6 @@ duplication of effort and to make sure our changes merge easily.
 ** Evaluations bearing off against contact and in back games are poor.
 ** Think about what should happen with variance reduction in Rollout()
   and RolloutGame() when a probability turns out <0 or >1.
-** The board window, and NeuralNetCreate() and NeuralNetResize, use
-  random() for their own purposes.  This will disturb the seed for
-  the BSD dice generator. (gary)
 ** Undoing a move that hit a blot in the X window doesn't restore the blot.
 
 * Miscellaneous:
